# fincheck_ai

./: .gitignore  DAY1_PART2_STATUS.md  PARSER_FIX_REPORT.md  QUICKSTART.md  README.md  SPEC_v2.md  UPLOAD_RESULTS.md  pyproject.toml  test_bulk_upload.sh
src/: __init__.py  agent.py  categorizer.py  config.yaml  database.py  grift_detector.py  main.py  main_divcalc.py  pdf_parser.py
tests/: test_basic.py
